updated all files

--- a/css/mixer.css
+++ b/css/mixer.css
@@ -318,6 +318,7 @@ img {
 
 .thumbnails img {
   width: 100px;
+  height: 100px;
   cursor: pointer;
   border-radius: 4px;
   border: 2px solid transparent;
